# car_damage_classification

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
car_damage_classification/: car_dmg_classification.ipynb  car_dmg_classification_base.ipynb  dinov3_convnext.ipynb  knn.ipynb  restructure_data.py
car_damage_classification/yolo/: yolo-det.ipynb  yolo-seg.ipynb
dataset/: train.cache  val.cache
