[project]
name = "car-damage-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "transformers>=4.57.1",
    "ultralytics>=8.3.228",
]
